# VoidPointer

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.zed/: tasks.json
core/: Cargo.toml  build.rs  target
core/src/: bindings.rs  lib.rs  runtime.rs
core/src/attitude/: mod.rs  types.rs
core/src/config/: flash_region.rs  load.rs  manager.rs  mod.rs  storage.rs  store.rs  types.rs  validate.rs  write_session.rs
core/src/config/migration/: mod.rs
core/src/ffi/: api.rs  board_map.rs  mod.rs
core/src/hid/: api.rs  mod.rs  sender.rs  types.rs
core/src/imu/: attitude.rs  mod.rs
core/src/input/: config.rs  encoder.rs  types.rs
core/src/led/: builder.rs  macros.rs  mod.rs  patterns.rs  runtime.rs
core/src/motion/: axis.rs  config.rs  mod.rs  resolver.rs  session.rs  state.rs
core/src/power/: mod.rs
core/src/pwm/: mod.rs
core/src/report/: config.rs  mod.rs  state.rs  types.rs
core/src/route/: mod.rs
core/src/runtime/: commands.rs  event_handler.rs  events.rs  hid_send.rs  mod.rs  power_coord.rs  report_runtime.rs
core/src/sync/: spsc.rs
core/src/utils/: clock.rs  critical.rs  global.rs  logger.rs  mod.rs  runtime.rs
docs/: CH585_NOTES.md  CONFIG_SPEC.md  DESIGN.md  FFI_ABI.md  LIGHTING.md  POWER_STATE_MACHINE.md  README.md  RESOURCE_PROFILE.md  ROUTE_STATE_MACHINE.md  SETUP.md  STYLE.md  TASKLIST.md  TEST_PLAN.md  VENDOR_PROTOCOL.md
docs/dev/: DECISIONS.md  OPEN_QUESTIONS.md  PROTOCOL_IMPL_STATUS.md  TASKLIST.md
platform/: .clang-format
platform/APP/: ble_gap_policy.c  ble_hid_app.c  board_gpio.c  board_input.c  board_map.c  hidmouse.c  hidmouse_main.c  imu_platform.c  led_platform.c  lsm6dsv.c  main.c  pwm_platform.c  usbhs_hid_device.c  vp_hal.c
platform/APP/include/: ble_gap_policy.h  ble_hid_app.h  ble_hid_app_config.h  board_gpio.h  board_input.h  board_map.h  hidmouse.h  imu_platform.h  led_platform.h  lsm6dsv.h  main.h  pwm_platform.h  usbhs_hid_device.h  vp_hal.h
platform/Bind/: .gitignore  board_map.h  board_map_gen.c  c_api.c  c_api.h
platform/HAL/: KEY.c  LED.c  MCU.c  RTC.c  SLEEP.c
platform/HAL/include/: CONFIG.h  HAL.h  KEY.h  LED.h  RTC.h  SLEEP.h
platform/LIB/: CH58xBLE_LIB.h  CH58xBLE_ROM.h  wchrf.h
platform/Profile/: battservice.c  devinfoservice.c  hiddev.c  hidmouseservice.c  scanparamservice.c
platform/Profile/include/: battservice.h  devinfoservice.h  hiddev.h  hidmouseservice.h  scanparamservice.h
platform/RVMSIS/: core_riscv.h
platform/StdPeriphDriver/: CH58x_adc.c  CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_i2c.c  CH58x_lcd.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer2.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CH58x_usbdev.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
platform/StdPeriphDriver/inc/: CH585SFR.h  CH58x_adc.h  CH58x_clk.h  CH58x_common.h  CH58x_flash.h  CH58x_gpio.h  CH58x_i2c.h  CH58x_lcd.h  CH58x_pwm.h  CH58x_pwr.h  CH58x_spi.h  CH58x_sys.h  CH58x_timer.h  CH58x_uart.h  CH58x_usbdev.h  CH58x_usbhost.h  ISP585.h
tools/: dev-task.py  webhid-test.html
tools/templates/: CMakeUserPresets.example.json  env.local.example
