[package]
name = "void_pointer_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]
doctest = false
test = false
bench = false

[dependencies]
fugit = "0.3"
half = { version = "2.7", default-features = false }
heapless = { version = "0.9", default-features = false }
libm = "0.2"
log = { version = "0.4", default-features = false }

[build-dependencies]
cbindgen = "0.29"
bindgen = "0.72"

[profile.dev]
panic = "abort"
opt-level = 0
debug = 2
lto = false

[profile.release]
panic = "abort"
opt-level = "s"
debug = 1
lto = false
codegen-units = 1