[package]
name = "void_pointer_core"
version = "0.1.0"
edition = "2024"

[lib]
bench = false
crate-type = ["rlib", "staticlib"]
doctest = false
test = false

[dependencies]
fugit = "0.3"
half = { version = "2.7", default-features = false }
heapless = { version = "0.9", default-features = false }
libm = "0.2"
log = { version = "0.4", default-features = false }
postcard = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

[build-dependencies]
bindgen = "0.72"
cbindgen = "0.29"

[profile.dev]
opt-level = 0
debug = 2
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
debug = 1
lto = false
panic = "abort"
codegen-units = 1
